docs: prevent horizontal scroll at narrow viewports

--- a/@udir-design/react/demo-pages/dashboard-demo/components/tab-structure/TabStructure.module.css
+++ b/@udir-design/react/demo-pages/dashboard-demo/components/tab-structure/TabStructure.module.css
@@ -28,5 +28,4 @@
   display: flex;
   flex-direction: column;
   gap: var(--ds-size-2);
-  text-wrap: nowrap;
 }
