--- a/@udir-design/react/demo-pages/dashboard-demo/tabs/test-answers/TestAnswers.module.css
+++ b/@udir-design/react/demo-pages/dashboard-demo/tabs/test-answers/TestAnswers.module.css
@@ -4,8 +4,12 @@
   gap: var(--ds-size-6);
 }
 
+.tableWrapper {
+  overflow-x: auto;
+}
+
 .table {
-  width: 12.5rem;
+  width: fit-content;
 }
 
 .rightAlign {
